<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:paddingTop="10dp"
        android:background="@android:color/white">



        <!--back button -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:padding="20dp"
            android:layout_gravity="top|start"
            android:src="@drawable/baseline_arrow_back_24" />

        <!--title header -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meditrack"
            android:textSize="55sp"
            android:textColor="#00B400"
            android:textStyle="bold"
            android:gravity="center" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:textSize="22sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:padding="32dp" />

        <!--blocks edittext -->
        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColorHint="#7ea481"
            android:textColor="#000000"
            android:background="@color/light_green"
            android:padding="12dp"
            android:hint="@string/username"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#7ea481"
            android:textColor="#000000"
            android:background="@color/light_green"
            android:padding="12dp"
            android:hint="@string/name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColorHint="#7ea481"
            android:textColor="#000000"
            android:background="@color/light_green"
            android:padding="12dp"
            android:hint="@string/email"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="#7ea481"
            android:textColor="#000000"
            android:background="@color/light_green"
            android:padding="12dp"
            android:hint="@string/password_2"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="#7ea481"
            android:textColor="#000000"
            android:background="@color/light_green"
            android:padding="12dp"
            android:hint="@string/confirm_password"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkBoxShowPassword"
            android:layout_width="328dp"
            android:layout_height="46dp"
            android:text="@string/show_password"
            android:layout_gravity="center"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button2"
            android:layout_width="157dp"
            android:layout_height="58dp"
            android:text="@string/sign_up"
            android:layout_marginTop="25dp"
            android:background="#00B400"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"/>


    </LinearLayout>
</ScrollView>