<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_prescription"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/circle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addPhotoButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:clickable="true"
        android:contentDescription="@string/add_photo"
        android:focusable="true"
        android:src="@drawable/outline_add_a_photo_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/importPhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="116dp"
        android:clickable="true"
        android:contentDescription="@string/import_photo"
        android:focusable="true"
        android:src="@drawable/import_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="204dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="228dp"
        android:text="Medicine Name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMedicineName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="268dp"
        android:background="@color/green_700"
        android:ems="10"
        android:hint="e.g. 'Paracetamol'"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Starting Date"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Date"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

